--- a/html/acknowledgements.html
+++ b/html/acknowledgements.html
@@ -9,7 +9,7 @@
      the viewport. -->
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<link href="http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Source+Code+Pro|Source+Sans+Pro:200,300,400,600,400italic,600italic|Rock+Salt" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Source+Code+Pro|Source+Sans+Pro:200,300,400,600,400italic,600italic|Rock+Salt" rel="stylesheet" type="text/css">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -19,7 +19,7 @@
   ga('create', 'UA-42804721-1', 'gameprogrammingpatterns.com');
   ga('send', 'pageview');
 </script>
-<script src="jquery-1.10.1.min.js"></script>
+<script src="jquery-3.6.0.min.js"></script>
 <script src="script.js"></script>
 </head>
 <body id="top">
@@ -49,23 +49,19 @@ proofreaders, but I had over <span name="colm">250 bug reports</span> to help im
 up the incentive of a writing schedule, but with readers patting my back when I
 finished each chapter, I had more than enough motivation.</p>
 <aside name="editor">
-
 <p>What I didn&#8217;t lose was a copy editor. Lauren Briese showed up just when I
 needed her and did a wonderful job.</p>
 </aside>
-
 <p>They call this &#8220;self publishing&#8221;, but &#8220;crowd publishing&#8221; is closer to the mark.
 Writing can be lonely work, but I was never alone. Even when I put the book on a
 shelf for two years, the encouragement continued. Without the dozens of people
 who didn&#8217;t let me forget that they were waiting for more chapters, I never would
 have picked it back up and finished.</p>
 <aside name="colm">
-
 <p>Special thanks go to Colm Sloan who pored over every single chapter in the book
 <em>twice</em> and gave me mountains of fantastic feedback, all out of the goodness of
 his own heart. I owe you a beer or twenty.</p>
 </aside>
-
 <p>To everyone who emailed or commented, upvoted or favorited, tweeted or
 retweeted, anyone who reached out to me, or told a friend about the book, or
 sent me a bug report: my heart is filled with gratitude for you. Completing this
@@ -78,6 +74,6 @@ book was one of my biggest goals in life, and you made it happen.</p>
 </nav>
 </div>
 </div>
-<footer>&copy; 2009-2014 Robert Nystrom</footer>
+<footer>&copy; 2009-2021 Robert Nystrom</footer>
 </body>
 </html>
