--- a/html/architecture-performance-and-games.html
+++ b/html/architecture-performance-and-games.html
@@ -9,7 +9,7 @@
      the viewport. -->
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<link href="http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Source+Code+Pro|Source+Sans+Pro:200,300,400,600,400italic,600italic|Rock+Salt" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic|Source+Code+Pro|Source+Sans+Pro:200,300,400,600,400italic,600italic|Rock+Salt" rel="stylesheet" type="text/css">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -19,7 +19,7 @@
   ga('create', 'UA-42804721-1', 'gameprogrammingpatterns.com');
   ga('send', 'pageview');
 </script>
-<script src="jquery-1.10.1.min.js"></script>
+<script src="jquery-3.6.0.min.js"></script>
 <script src="script.js"></script>
 </head>
 <body id="top">
@@ -39,21 +39,17 @@ nothing else, when you get dragged into an <span name="ammo">argument</span>
 about how terrible (or awesome) design patterns and software architecture are,
 it will give you some ammo to use.</p>
 <aside name="ammo">
-
 <p>Note that I didn&#8217;t presume which side you&#8217;re taking in that fight. Like any arms
 dealer, I have wares for sale to all combatants.</p>
 </aside>
-
 <h2><a href="#what-is-software-architecture" name="what-is-software-architecture">What is Software Architecture?</a></h2>
 <p><span name="won't">If</span> you read this book cover to cover, you won&#8217;t come
 away knowing the linear algebra behind 3D graphics or the calculus behind game
 physics. It won&#8217;t show you how to alpha-beta prune your AI&#8217;s search tree or
 simulate a room&#8217;s reverberation in your audio playback.</p>
 <aside name="won't">
-
 <p>Wow, this paragraph would make a terrible ad for the book.</p>
 </aside>
-
 <p>Instead, this book is about the code <em>between</em> all of that. It&#8217;s less about
 writing code
 than it is about <em>organizing</em> it. Every program has <em>some</em> organization, even if
@@ -65,10 +61,8 @@ I have an intuition about good design. We&#8217;ve all suffered through codebase
 <span name="suffered">bad</span>, the best you could hope to do for them is take
 them out back and put them out of their misery.</p>
 <aside name="suffered">
-
 <p>Let&#8217;s admit it, most of us are <em>responsible</em> for a few of those.</p>
 </aside>
-
 <p>A lucky few have had the opposite experience, a chance to work with beautifully
 designed code. The kind of codebase that feels like a perfectly appointed luxury
 hotel festooned with concierges waiting eagerly on your every whim. What&#8217;s the
@@ -93,10 +87,8 @@ existing code is doing. You don&#8217;t have to know the whole program, of cours
 you need to <span name="ocr">load</span> all of the relevant pieces of it into
 your primate brain.</p>
 <aside name="ocr">
-
 <p>It&#8217;s weird to think that this is literally an OCR process.</p>
 </aside>
-
 <p>We tend to gloss over this step, but it&#8217;s often the most time-consuming part of
 programming. If you think paging some data from disk into RAM is slow, try
 paging it into a simian cerebrum over a pair of optical nerves.</p>
@@ -109,14 +101,12 @@ lights blink on screen and you&#8217;re done, right? Not just yet! Before you wr
 <span name="tests">tests</span> and send it off for code review, you often have
 some cleanup to do.</p>
 <aside name="tests">
-
 <p>Did I say &#8220;tests&#8221;? Oh, yes, I did. It&#8217;s hard to write unit tests for some game
 code, but a large fraction of the codebase is perfectly testable.</p>
 <p>I won&#8217;t get on a soapbox here, but I&#8217;ll ask you to consider doing more automated
 testing if you aren&#8217;t already. Don&#8217;t you have better things to do than manually
 validate stuff over and over again?</p>
 </aside>
-
 <p>You jammed a bit more code into your game, but you don&#8217;t want the next person to
 come along to trip over the wrinkles you left throughout the source. Unless the
 change is minor, there&#8217;s usually a bit of reorganization to do to make your new
@@ -127,11 +117,9 @@ written.</p>
 <p><span name="life-cycle"></span></p>
 <p><img src="images/architecture-cycle.png" alt="Get problem &rarr; Learn code &rarr; Code solution &rarr; Clean up &rarr; and back around to the beginning." /></p>
 <aside name="life-cycle">
-
 <p>The fact that there is no escape from that loop is a little alarming now that I
 think about it.</p>
 </aside>
-
 <h3><a href="#how-can-decoupling-help" name="how-can-decoupling-help">How can decoupling help?</a></h3>
 <p>While it isn&#8217;t obvious, I think much of software architecture is about that
 learning phase. Loading code into neurons is so painfully slow that it pays to
@@ -165,7 +153,6 @@ have to take great care to both <span name="maintain">organize</span> the code
 well and <em>keep</em> it organized throughout the thousands of little changes that
 make up a development cycle.</p>
 <aside name="maintain">
-
 <p>The second half of this&#8202;&mdash;&#8202;maintaining your design&#8202;&mdash;&#8202;deserves special
 attention. I&#8217;ve seen many programs start out beautifully and then die a death of a
 thousand cuts as programmers add &#8220;just one tiny little hack&#8221; over and over
@@ -173,7 +160,6 @@ again.</p>
 <p>Like gardening, it&#8217;s not enough to put in new plants. You must also weed and
 prune.</p>
 </aside>
-
 <p>You have to think about which parts of the program should be decoupled and
 introduce abstractions at those points. Likewise, you have to determine where
 extensibility should be engineered in so future changes are easier to make.</p>
@@ -190,12 +176,10 @@ your game that takes time to develop, debug, and maintain.</p>
 modularity doesn&#8217;t end up being helpful, it quickly becomes actively harmful.
 After all, it is more code you have to deal with.</p>
 <aside name="yagni">
-
 <p>Some folks coined the term &#8220;YAGNI&#8221;&#8202;&mdash;&#8202;<a href="http://en.wikipedia.org/wiki/You_aren't_gonna_need_it">You aren&#8217;t gonna need
 it</a>&#8202;&mdash;&#8202;as a mantra to use
 to fight this urge to speculate about what your future self may want.</p>
 </aside>
-
 <p>When people get overzealous about this, you get a codebase whose architecture
 has spiraled out of control. You&#8217;ve got interfaces and abstractions everywhere.
 Plug-in systems, abstract base classes, virtual methods galore, and all sorts of
@@ -217,7 +201,6 @@ performance. Many patterns that make your code more flexible rely on virtual
 dispatch, interfaces, pointers, messages, and <span name="templates">other
 mechanisms</span> that all have at least some runtime cost.</p>
 <aside name="templates">
-
 <p>One interesting counter-example is templates in C++. Template metaprogramming
 can sometimes give you the abstraction of interfaces without any penalty at
 runtime.</p>
@@ -230,7 +213,6 @@ more flexible but implies some runtime overhead.</p>
 decision of which class to call at <em>compile time</em> when the template is
 instantiated.</p>
 </aside>
-
 <p>There&#8217;s a reason for this. A lot of software architecture is about making your
 program more flexible. It&#8217;s about making it take less effort to change it. That
 means encoding fewer assumptions in the program. You use interfaces so that your
@@ -300,12 +282,10 @@ looks like it works, it <em>cannot</em> be maintained and <em>must</em> be rewri
 there&#8217;s a <em>chance</em> you&#8217;ll end up having to keep it around, you may have to
 defensively write it well.</p>
 <aside name="throwaway">
-
 <p>One trick to ensuring your prototype code isn&#8217;t obliged to become real code is
 to write it in a language different from the one your game uses. That way, you have to
 rewrite it before it can end up in your actual game.</p>
 </aside>
-
 <h2><a href="#striking-a-balance" name="striking-a-balance">Striking a Balance</a></h2>
 <p>We have a few forces in play:</p>
 <ol>
@@ -315,12 +295,10 @@ rewrite it before it can end up in your actual game.</p>
 <li>We want to get today&#8217;s features done quickly.</li>
 </ol>
 <aside name="speed">
-
 <p>I think it&#8217;s interesting that these are all about some kind of speed: our
 long-term development speed, the game&#8217;s execution speed, and our short-term
 development speed.</p>
 </aside>
-
 <p>These goals are at least partially in opposition. Good architecture improves
 productivity over the long term, but maintaining it means every change requires
 a little more effort to keep things clean.</p>
@@ -342,12 +320,10 @@ constraints. After all, if there was an easy answer, everyone would just do
 that. A field you can master in a week is ultimately boring. You don&#8217;t hear of
 someone&#8217;s distinguished career in <span name="ditch">ditch digging</span>.</p>
 <aside name="ditch">
-
 <p>Maybe you do; I didn&#8217;t research that analogy. For all I know, there could be avid
 ditch digging hobbyists, ditch digging conventions, and a whole subculture
 around it. Who am I to judge?</p>
 </aside>
-
 <p>To me, this has much in common with games themselves. A game like chess
 can never be mastered because all of the pieces are so perfectly balanced
 against one another. This means you can spend your life exploring the vast space
@@ -369,7 +345,6 @@ less time to <em>write</em>. You&#8217;d think it would since you end up with le
 code, but a good solution isn&#8217;t an accretion of code, it&#8217;s a <em>distillation</em> of
 it.</p>
 <aside name="simple">
-
 <p>Blaise Pascal famously ended a letter with, &#8220;I would have written a shorter
 letter, but I did not have the time.&#8221;</p>
 <p>Another choice quote comes from Antoine de Saint-Exupery: &#8220;Perfection is
@@ -378,7 +353,6 @@ to take away.&#8221;</p>
 <p>Closer to home, I&#8217;ll note that every time I revise a chapter in this book, it
 gets shorter. Some chapters are tightened by 20% by the time they&#8217;re done.</p>
 </aside>
-
 <p>We&#8217;re rarely presented with an elegant problem. Instead, it&#8217;s a pile of use
 cases. You want the X to do Y when Z, but W when A, and so on. In other words, a
 long list of different example behaviors.</p>
@@ -411,11 +385,9 @@ few bits of advice that I hope may be useful to you:</p>
 </li>
 </ul>
 <aside name="think">
-
 <p>Trust me, two months before shipping is <em>not</em> when you want to start worrying
 about that nagging little &#8220;game only runs at 1 FPS&#8221; problem.</p>
 </aside>
-
 <ul>
 <li>
 <p>Move quickly to explore your game&#8217;s design space, but don&#8217;t go so fast that
@@ -438,6 +410,6 @@ about that nagging little &#8220;game only runs at 1 FPS&#8221; problem.</p>
 </nav>
 </div>
 </div>
-<footer>&copy; 2009-2014 Robert Nystrom</footer>
+<footer>&copy; 2009-2021 Robert Nystrom</footer>
 </body>
 </html>
