add theme toggler to template

--- a/html/event-queue.html
+++ b/html/event-queue.html
@@ -24,6 +24,7 @@
 </head>
 <body id="top">
 <div class="page sidebar">
+<span class="theme-toggler" title="dark theme" onclick="toggleTheme()"></span>
 <div class="content">
 <nav class="top">
   <span class="prev">&larr; <a href="component.html">Previous Chapter</a></span>
