--- a/asset/template.html
+++ b/asset/template.html
@@ -24,6 +24,7 @@
 </head>
 <body id="top">
 <div class="page sidebar">
+<span class="theme-toggler" title="dark theme" onclick="toggleTheme()"></span>
 <div class="content">
 <nav class="top">
   {{prev}}
